--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,56 @@
-# ========== Unity ==========
-
-# Build results
-[Bb]uild/
-[Bb]uilds/
-[Bb]in/
-[Ll]ogs/
-
-# User-specific files
-*.user
-*.userprefs
-*.pidb
-*.booproj
-*.svd
-*.suo
-*.tmp
-*.temp
-*.bak
-*.ncb
-*.opendb
-*.VC.db
-
-# Unity generated files
-*.csproj
-*.unityproj
-*.sln
-*.sln.*
-*.tmproj
-*.pdb
-
-# OS junk files
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# VS Code
-.vscode/
-
-# Rider
-.idea/
-*.sln.iml
-
-# Cache / temporary files
+# Unity generated folders
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+[Ll]ogs/
 [Mm]emoryCaptures/
-[Uu]serSettings/
 
-# Do not ignore .meta files in Assets, ProjectSettings or Packages
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# User-specific settings
+UserSettings/
+
+# IDEs
+.vscode/
+.idea/
+
+# Unity auto-generated meta files outside of Assets — allow only inside Assets
 !Assets/**/*.meta
-!ProjectSettings/**/*.meta
-!Packages/**/*.meta
+*.meta
 
-# Ignore meta files in ignored folders
-[Ll]ibrary/**/*.meta
-[Tt]emp/**/*.meta
-[Oo]bj/**/*.meta
-[Bb]uild/**/*.meta
-[Bb]in/**/*.meta
-[Mm]emoryCaptures/**/*.meta
+# Package manager
+Packages/packages-lock.json
 
-# Auto-generated JetBrains Rider plugin
-Assets/Plugins/Editor/JetBrains*
+# Crash and analytics data
+*.pidb
+*.booproj
+*.sln
+*.user
+*.userprefs
+*.csproj
 
-# Unity Collab
-.collabignore
+# Exclude platform-specific builds
+*.apk
+*.aab
+*.xcworkspace
+*.xcuserstate
+
+# Rider
+*.sln.iml
+.idea/
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+*.unityproj
+
+# Visual Studio Code
+.vscode/
+
+# Auto-generated files
+*.generated.cs
+
